Add prepare script to automatically build on install

--- a/sqlts/package.json
+++ b/sqlts/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "dev": "tsc --watch",
     "test": "vitest",
-    "test:run": "vitest run"
+    "test:run": "vitest run",
+    "prepare": "tsc"
   },
   "keywords": ["sql", "typescript"],
   "author": "",
