--- a/vite-sqlts/package.json
+++ b/vite-sqlts/package.json
@@ -29,13 +29,13 @@
   "author": "",
   "license": "MIT",
   "peerDependencies": {
-    "vite": "^4.0.0 || ^5.0.0"
+    "vite": "^7.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "tsup": "^8.0.0",
     "typescript": "^5.0.0",
-    "vite": "^5.0.0",
-    "vitest": "^2.0.0"
+    "vite": "^7.0.0",
+    "vitest": "^4.0.0"
   }
 }
